--- a/pages/App.css
+++ b/pages/App.css
@@ -2,3 +2,72 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+/* Styles für die Unterschiedlichen Divs */
+.divContainer {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.divFullscreen {
+  width: 100%;
+  height: 100vh;
+}
+
+.div1 {
+  /* background-color: lightblue; */
+  height: calc(100vh - 75px);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 50px;
+}
+
+.div2 {
+  /* background-color: lightgreen; */
+}
+
+.div3 {
+  background-color: lightcoral;
+}
+
+.div4 {
+  background-color: lightgoldenrodyellow;
+  height: calc(100vh);
+}
+
+/* Styles für das Titel-Div */
+#buttonContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+/* Styles für das Map-Div */
+.mapPickerContainer {
+  height: 15vh;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+
+#mapTextSubcontainer {
+  width: 70%;
+  align-self: center;
+  text-align: left;
+  margin-left: 15px;
+}
+
+#mapPickerSubcontainer {
+  width: 30%;
+  align-self: center;
+}
