--- a/pages/App.css
+++ b/pages/App.css
@@ -51,6 +51,17 @@ body {
   justify-content: center;
 }
 
+#iconContainer {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: rgb(170, 170, 170);
+  margin: 0 5px;
+}
+
 /* Styles für das Map-Div */
 .mapPickerContainer {
   height: 15vh;
@@ -58,6 +69,7 @@ body {
   flex-direction: row;
   justify-content: center;
   flex-wrap: nowrap;
+  background-color: rgb(230, 230, 230);
 }
 
 #mapTextSubcontainer {
@@ -79,6 +91,7 @@ body {
   flex-direction: row;
   justify-content: center;
   flex-wrap: nowrap;
+  background-color: rgb(230, 230, 230);
 }
 
 .VisContainer {
@@ -105,10 +118,14 @@ body {
   flex-direction: row;
   justify-content: center;
   flex-wrap: nowrap;
+  background-color: rgb(230, 230, 230);
 }
 
 .PreContainer {
   height: 85vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 #PreTitelSubcontainer {
